Update "api" and "test" to support embedded in DAG workflows
