# cwl_airflow/components/api/openapi/swagger_configuration.yaml
@@ -86,8 +86,13 @@ paths:
         - name: workflow
           description: CWL workflow file with embedded tools and all other dependencies
           in: formData
-          required: true
+          required: false
           type: file
+        - name: workflow_content
+          description: base64 encoded zlib compressed workflow content
+          in: formData
+          required: false
+          type: string
       tags:
         - Airflow
 
